<resources>
    <string name="app_name">Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="dissmis">Dissmis</string>
    <string name="open">Open</string>
    <string name="create_key">Create KEy</string>
    <string name="dismiss">Dismiss</string>
    <string name="profile">Profile</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name_profile">LAST NAME</string>
    <string name="email_profile">EMAIL</string>
</resources>